--- a/libs/component-module/tsconfig.json
+++ b/libs/component-module/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "react-jsx",
     "allowJs": false,
@@ -18,6 +19,5 @@
     {
       "path": "./.storybook/tsconfig.json"
     }
-  ],
-  "extends": "../../tsconfig.base.json"
+  ]
 }
