--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "backend:dev": "yarn nx run backend:serve",
     "seed-db": "yarn prisma db seed",
     "prisma-generate": "yarn prisma generate --schema ./apps/backend/prisma/schema.prisma",
-    "initial-prisma": "yarn prisma-generate && yarn seed-db"
+    "initial-prisma": "yarn prisma-generate && yarn seed-db",
+    "ui-dev": "yarn nx run ui:serve ",
+    "storybook": "yarn nx run component-module:storybook"
   },
   "volta": {
     "node": "16.16.0",
@@ -17,9 +19,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.12.0",
+    "@mui/styles": "^5.12.0",
     "@prisma/client": "^4.12.0",
-    "axios": "^1.0.0",
+    "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -28,6 +32,8 @@
     "morgan": "^1.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-table": "^7.8.0",
     "tslib": "^2.3.0",
     "zod": "^3.21.4"
   },
@@ -58,12 +64,13 @@
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.5.15",
     "@svgr/webpack": "^6.1.2",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/react": "^14.0.0",
     "@types/express": "4.17.13",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.11",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-table": "^7.7.14",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "^29.4.1",
@@ -83,6 +90,7 @@
     "nx": "15.9.2",
     "prettier": "^2.6.2",
     "prisma": "^4.12.0",
+    "react-docgen-typescript-plugin": "^1.0.5",
     "react-refresh": "^0.10.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.0.5",
