--- a/package.json
+++ b/package.json
@@ -26,19 +26,23 @@
     "@mui/lab": "^5.0.0-alpha.127",
     "@mui/material": "^5.12.0",
     "@mui/styles": "^5.12.0",
+    "@mui/x-date-pickers": "^6.2.1",
     "@prisma/client": "^4.12.0",
     "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.10.0",
     "react-table": "^7.8.0",
     "tslib": "^2.3.0",
+    "yarn": "^1.22.19",
     "zod": "^3.21.4"
   },
   "devDependencies": {
