--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.5.15",
     "@svgr/webpack": "^6.1.2",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "^29.5.1",
